Fix feature alignment

--- a/apps/dynamic/assets/css/cukeup.less
+++ b/apps/dynamic/assets/css/cukeup.less
@@ -222,12 +222,16 @@ body {
   }
 }
 
-#featured { padding: 40px 0; text-align: center; }
+#featured {
+  padding: 40px 0;
+  text-align: center;
+}
 
 .feature {
   width: 280px;
   margin: 0 3%;
   display: inline-block;
+  vertical-align: top;
 
   h1 {
     font-family: 'Roboto';
